<resources>
    <string name="app_name">Oglasnik.hr</string>
    <string name="title_activity_login">Prijavi se</string>
    <string name="title_activity_registration">Registracija</string>
    <string name="title_activity_category">Kategorije</string>
    <string name="title_activity_addfile">Predaj oglas</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Lozinka</string>
    <string name="action_sign_in">Prijavi se</string>
    <string name="action_sign_in_short">Prijava</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_registration">Registriraj se</string>
    <string name="search">Search</string>
    <string name="predaj_oglas_btn">Predaj oglas</string>
    <string name="kategorije_btn">Pretraga oglasa</string>
    <string name="registracija_btn">Registracija</string>
    <string name="prijava_btn">Prijava</string>
    <string name="forgot_pass_btn">Zaboravljena lozinka ili korisničko ime?</string>
    <string name="string_user_name">Korisničko ime</string>
    <string name="string_name">Ime</string>
    <string name="string_surname">Prezime</string>
    <string name="string_birthdate">Godina rođenja</string>
    <string name="string_adress">Adresa</string>
    <string name="string_city">Grad</string>
    <string name="string_post_number">Poštanski broj</string>
    <string name="string_phone_num">Broj tel ili mob</string>
</resources>



