<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="hr.oglasnik.perhpethua.oo.MainActivity">


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/search"
        android:layout_alignParentEnd="true"
        android:id="@+id/imageButton2"
        android:onClick="Searchme"
        android:layout_alignBottom="@+id/id_search_input"/>

    <Button
        android:text="@string/predaj_oglas_btn"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="@dimen/big_btn_height"
        android:layout_marginTop="55dp"
        android:id="@+id/button2"
        android:drawableTop="@drawable/addfile"
        android:paddingTop="@dimen/padding_top"
        android:textSize="@dimen/btn_font_size"
        android:textAlignment="center"
        android:background="@drawable/addfilebtnbackground"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:onClick="addfile"/>
       <!-- android:layout_below="@+id/id_search_input"  -->


    <Button
        android:text="@string/kategorije_btn"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="@dimen/big_btn_height"
        android:id="@+id/btnKategorije"
        android:textColor="@color/colorAccent"
        android:drawableTop="@drawable/category"
        android:textSize="@dimen/btn_font_size"
        android:drawablePadding="2dip"
        android:paddingTop="@dimen/padding_top"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@+id/button2"
        android:layout_alignParentStart="true"
        android:onClick="parseJSON"/>

    <Button
        android:text="@string/registracija_btn"
        android:textAllCaps="false"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:id="@+id/btnRegistracija"
        android:drawableTop="@drawable/registration"
        android:textSize="@dimen/btn_font_size"
        android:textAlignment="center"
        android:background="@drawable/corners"
        android:textColor="@color/btn_text_color"
        android:paddingTop="@dimen/small_padding_top"
        android:paddingBottom="@dimen/small_padding_bottom"
        android:layout_below="@+id/btnKategorije"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="21dp"

        android:onClick="registration"/>

    <Button
        android:text="@string/prijava_btn"
        android:textAllCaps="false"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:id="@+id/btnPrijava"
        android:drawableTop="@drawable/login"
        android:textSize="@dimen/btn_font_size"
        android:background="@drawable/loginbtn"
        android:textColor="@color/btn_text_color"
        android:paddingTop="@dimen/small_padding_top"
        android:paddingBottom="@dimen/small_padding_bottom"
        android:layout_alignBaseline="@+id/btnRegistracija"
        android:layout_alignBottom="@+id/btnRegistracija"
        android:layout_alignParentStart="true"

        android:onClick="login"
        />

    <Button
        android:text="@string/forgot_pass_btn"
        android:background="@null"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/forgot_password_link"
        android:clickable="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnRegistracija"
        android:textAlignment="center"
        android:paddingTop="5dp"
        android:onClick="forgotPassword"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/id_search_input"
        android:hint="@string/search"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/imageButton2"/>


</RelativeLayout>
